Added Edit, Delete, & Save Buttons
- user action buttons added to handlebars templates

--- a/assets/scripts/templates/currentplaylist.handlebars
+++ b/assets/scripts/templates/currentplaylist.handlebars
@@ -10,6 +10,9 @@
         <p>
           {{this.tracks.artist}}
         </p>
+        <button class="btn btn-info btn-sm delete-content">Delete Track</button>
+        <button class= "edit-content btn btn-info btn-sm">Edit Content</button>
+        <button class= "save-changes btn btn-info btn-sm">Save Changes</button>
       </div>
       {{/if}}
     {{/each}}
