--- a/assets/scripts/templates/tracks.handlebars
+++ b/assets/scripts/templates/tracks.handlebars
@@ -9,6 +9,8 @@
         <p>
           {{this.host_url}}
         </p>
+        <button class="btn btn-info btn-sm delete-content">Delete Track</button>
+        <button class= "save-changes btn btn-info btn-sm">Save Changes</button>
       </div>
     {{/each}}
   </div>
