--- a/assets/scripts/templates/playlists.handlebars
+++ b/assets/scripts/templates/playlists.handlebars
@@ -1,11 +1,13 @@
-<div class="row">
-  <div class="col-sm-8 blog-main">
+<!-- <div class="row">
+  <div class="col-sm-8 blog-main"> -->
     {{#each playlists as |playlist|}}
-      <div class="playlist">
-        <h2 class="playlist-name">{{this.name}}</h2>
-        <button class="btn btn-info btn-sm delete-content">Delete Playlist</button>
-        <button class= "save-changes btn btn-info btn-sm">Save Changes</button>
+      <ul data-id="{{playlist.id}}">
+        <li class="playlist-name">{{this.name}}</li>
+        <li><button class= "select-playlist btn btn-info btn-sm">Select Playlist</button></li>
+        <li><button class="delete-content btn btn-info btn-sm">Delete Playlist</button></li>
+        <li><button class= "save-changes btn btn-info btn-sm">Save Changes</button></li>
+      </ul>
       </div>
     {{/each}}
-  </div>
-</div>
+  <!-- </div>
+</div> -->
