--- a/assets/scripts/templates/currentplaylist.handlebars
+++ b/assets/scripts/templates/currentplaylist.handlebars
@@ -3,9 +3,15 @@
   {{#each this}}
     <ul data-id={{this.id}}>
         <li class="current-playlist-name">{{this.name}}</li>
-        <li><button class="remove-track btn btn-info btn-sm">Remove Track</button></li>
+        <li class="current-playlist-tracks">
+          <ul> {{#each this.tracks}}
+            <li>Title: {{title}}</li>
+            <li>Artist: {{artist}}</li>
+            <li>Src: {{host_url}}</li>
+            <li><button class="remove-track btn btn-info btn-sm">Remove Track</button></li>
+            <li><button class= "save-changes btn btn-info btn-sm">Save Changes</button></li>
+          </ul>{{/each}}
         <li><button class= "edit-content btn btn-info btn-sm">Edit Playlist</button></li>
-        <li><button class= "save-changes btn btn-info btn-sm">Save Changes</button></li>
     </ul>
   {{/each}}
       <!-- </div> -->
