--- a/assets/scripts/templates/playlists.handlebars
+++ b/assets/scripts/templates/playlists.handlebars
@@ -4,7 +4,7 @@
       <ul data-id="{{playlist.id}}">
         <li class="playlist-name">{{this.name}}</li>
         <li><button class= "select-playlist btn btn-info btn-sm">Select Playlist</button></li>
-        <li><button class="delete-content btn btn-info btn-sm">Delete Playlist</button></li>
+        <li><button class="delete-playlist btn btn-info btn-sm">Delete Playlist</button></li>
         <li><button class= "save-changes btn btn-info btn-sm">Save Changes</button></li>
       </ul>
       </div>
