Style for Templates
Light styling edits, adding hidden class to buttons that should only
appear to confirm actions, once the delete and edit function is set
to be confirmed instead of firing automatically.
Removed bullet points from ul styling

--- a/assets/scripts/templates/currentplaylist.handlebars
+++ b/assets/scripts/templates/currentplaylist.handlebars
@@ -8,8 +8,8 @@
             <li>Title: {{title}}</li>
             <li>Artist: {{artist}}</li>
             <li>Src: {{host_url}}</li>
-            <li><button class="remove-track btn btn-info btn-sm">Remove Track</button></li>
-            <li><button class= "save-changes btn btn-info btn-sm">Save Changes</button></li>
+            <li><button class="remove-track hidden btn btn-info btn-sm">Remove Track</button></li>
+            <li><button class= "save-changes hidden btn btn-info btn-sm">Save Changes</button></li>
           </ul>{{/each}}
         <li><button class= "edit-content btn btn-info btn-sm">Edit Playlist</button></li>
     </ul>
