--- a/assets/scripts/templates/tracks.handlebars
+++ b/assets/scripts/templates/tracks.handlebars
@@ -7,7 +7,8 @@
         <li><p class="track-meta">{{this.artist}}</p></li>
         <li><p>{{this.host_url}}</p></li>
         <li><button class="btn btn-info btn-sm delete-track">Delete Track</button></li>
-        <li><button class= "save-changes btn btn-info btn-sm">Save Changes</button></li>
+        <li><button class= "save-changes hidden btn btn-info btn-sm">Save Changes</button></li>
+        <li><button class= "add-to-playlist btn btn-info btn-sm">Add to Playlist</button></li>
       </ul>
       </div>
     {{/each}}
