Changed Dropdown Menu Style
- used a different style of dropdown that uses less code than previous
option

--- a/assets/scripts/templates/tracks.handlebars
+++ b/assets/scripts/templates/tracks.handlebars
@@ -9,6 +9,8 @@
         <li><button class="btn btn-info btn-sm delete-track">Delete Track</button></li>
         <li><button class= "save-changes hidden btn btn-info btn-sm">Save Changes</button></li>
         <li><button class= "add-to-playlist btn btn-info btn-sm">Add to Playlist</button></li>
+        <li><select class="selectPlaylist" name="selectPlaylist" id="selectPlaylist"></select>
+        </li>
       </ul>
       </div>
     {{/each}}
