Added Confirm Action Button
Confirm button added to add-track to playlist feature

--- a/assets/scripts/templates/tracks.handlebars
+++ b/assets/scripts/templates/tracks.handlebars
@@ -11,6 +11,7 @@
         <li><button class= "add-to-playlist btn btn-info btn-sm">Add to Playlist</button></li>
         <li><select class="selectPlaylist" name="selectPlaylist" id="selectPlaylist"></select>
         </li>
+        <li><button class= "confirm-to-playlist btn btn-info btn-sm">Confirm</button></li>
       </ul>
       </div>
     {{/each}}
