Cancel Button for Tracks Actions
When a user selects "add to playlist" a cancel button now shows.
When the cancel button is selected, it hides the appropriate buttons
(confirm, the dropdown, cancel) and shows the Add to Playlist button
once more.

--- a/assets/scripts/templates/tracks.handlebars
+++ b/assets/scripts/templates/tracks.handlebars
@@ -10,7 +10,8 @@
         <li><button class= "save-changes hidden btn btn-info btn-sm">Save Changes</button></li>
         <li><button class= "add-to-playlist btn btn-info btn-sm">Add to Playlist</button></li>
         <li><select class="selectPlaylist hidden" name="selectPlaylist"></select></li>
-        <li><button class= "confirm-to-playlist btn btn-info btn-sm">Confirm</button></li>
+        <li><button class= "confirm-to-playlist hidden btn btn-info btn-sm">Confirm</button></li>
+        <li><button class= "cancel-to-playlist hidden btn btn-info btn-sm">Cancel</button></li>
       </ul>
       </div>
     {{/each}}
