Edit Track Details
- added button to tracks.handlebars
- added event action to ui.js, currently fires console.log

--- a/assets/scripts/templates/tracks.handlebars
+++ b/assets/scripts/templates/tracks.handlebars
@@ -12,6 +12,7 @@
         <li><select class="selectPlaylist hidden" name="selectPlaylist"></select></li>
         <li><button class= "confirm-to-playlist hidden btn btn-info btn-sm">Confirm</button></li>
         <li><button class= "cancel-to-playlist hidden btn btn-info btn-sm">Cancel</button></li>
+        <li><button class= "edit-track btn btn-info btn-sm">Edit Track</button></li>
       </ul>
       </div>
     {{/each}}
