--- a/assets/scripts/templates/playlists.handlebars
+++ b/assets/scripts/templates/playlists.handlebars
@@ -5,7 +5,8 @@
         <li><h2 class="playlist-name">{{this.name}}</h2></li>
         <li><button class= "select-playlist btn btn-info btn-sm">Select Playlist</button></li>
         <li><button class="delete-playlist btn btn-info btn-sm">Delete Playlist</button></li>
-        <li><button class= "save-changes hidden btn btn-info btn-sm">Save Changes</button></li>
+        <li><button class= "save-changes-playlist hidden btn btn-info btn-sm">Save Changes</button></li>
+        <li><button class= "edit-playlist btn btn-info btn-sm">Edit</button></li>
       </ul>
       </div>
     {{/each}}
