Class hidden edits

--- a/assets/scripts/templates/currentplaylist.handlebars
+++ b/assets/scripts/templates/currentplaylist.handlebars
@@ -13,6 +13,7 @@
             <li><button class= "save-changes-current hidden btn btn-info btn-sm">Save Changes</button></li>
           </ul>{{/each}}
         <li><button class= "edit-current-playlist btn btn-info btn-sm">Edit Playlist</button></li>
+        <li><button class= "cancel-changes-current hidden btn btn-info btn-sm">Cancel</button></li>
     </ul>
   {{/each}}
       <!-- </div> -->
