--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -73,7 +73,7 @@ p {
 
 .medium-spacer {
   background-color: yellow;
-  width: 26%;
+  width: 3%;
   height: 50px;
   position: relative;
   // float: left;
@@ -95,15 +95,18 @@ p {
 }
 
 .title {
-  width: 29%;
-  float: left;
+  width: 100%;
+  // float: left;
   text-align: center;
   margin: 6px;
 }
 
 .blurb {
-  float: left;
+  // float: left;
   width: 100%;
+  border: 5px;
+  text-align: center;
+  // text-indent: 10px;
 }
 
 .container-fluid {
@@ -116,9 +119,12 @@ h2 {
   text-decoration-style: double;
 }
 
-// .row {
-//   width: 100%;
-// }
+.button {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
 
 .container {
   display: flex;
@@ -137,5 +143,49 @@ html,
 body {
   margin: 0px;
   padding: 0px;
-  background-image: "https://i.stack.imgur.com/oM0m0.png";
+  background-image: url('http://www.designbolts.com/wp-content/uploads/2012/12/Noisy-Grid-Seamless-Pattern-For-Website-Background.jpg');
+}
+
+.message {
+  // text-align: center;
+  font-size: 30px;
+  color: white;
+  display: block;
+  display: table;
+  margin: 0 auto;
+  background-color: blue;
+}
+
+.message-block {
+  // text-align: center;
+  background-color: green;
+  display: block;
+  width: 100%;
+  height: 50px;
+}
+
+#sign-out {
+  background-color: #ccc;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius:6px;
+  color: #fff;
+  font-family: 'Oswald';
+  font-size: 20px;
+  text-decoration: none;
+  cursor: pointer;
+  border:none;
+}
+
+#sign-out:hover {
+  border: none;
+  background:red;
+  box-shadow: 0px 0px 1px #777;
+}
+
+.button-row {
+  position: inherit;
+  float: right;
+  margin: 10px;
+  border-radius: 10px;
 }
