--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -2,8 +2,11 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
 
 #footerwrap {
-  position:fixed;
+  position: fixed;
   bottom: 0;
+  width: 50%;
+  text-align: center;
+  margin: 0 auto;
 }
 
 .contents {
@@ -14,29 +17,33 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 }
 
 .current-playlist-container {
+  align-content: center;
+  position: relative;
   background: red;
-  width: 500px;
+  width: 70%;
   height: 100%;
-  float: right;
+  float: left;
 }
 
 .current-playlist-title {
   background: blue;
-  height: 5%;
-  width: 70%;
+  height: 100%;
+  width: 100%;
 }
 
 .current-playlist {
   background: pink;
-  width: 70%;
+  width: 100%;
   height: 95%;
 }
 
 .tracks-container, .playlists-container {
-  // background: red;
-  width: 30%;
+  background: red;
+  width: 500px;
   height: 50%;
   float: right;
+  position: relative;
+  // overflow: auto;
 }
 
 .tracks-title, .playlists-title {
@@ -46,7 +53,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 }
 
 .playlists-list, .tracks-list {
-  // background: green;
+  background: green;
   height: 50%;
   width: 30%;
 }
@@ -62,6 +69,13 @@ p {
 
 .hidden {
   display: none;
+}
+
+.largest-spacer {
+  background-color: black;
+  width: 20%;
+  height: 50px;
+  // float: left;
 }
 
 .large-spacer {
@@ -88,7 +102,7 @@ p {
 
 .smallest-spacer {
   background-color: pink;
-  width: 16%;
+  width: 15%;
   height: 20px;
   float: left;
   position: relative;
@@ -96,7 +110,7 @@ p {
 
 .title {
   width: 100%;
-  // float: left;
+  position: absolute;
   text-align: center;
   margin: 6px;
 }
@@ -184,8 +198,20 @@ body {
 }
 
 .button-row {
-  position: inherit;
+  position: relative;
+  float: left;
+  margin: 10px;
+  border-radius: 10px;
+}
+
+.sound-row {
+  position: relative;
   float: right;
   margin: 10px;
   border-radius: 10px;
+}
+
+.signature {
+  position: relative;
+  float: right;
 }
