Addition of missing li closing tag

--- a/assets/scripts/templates/currentplaylist.handlebars
+++ b/assets/scripts/templates/currentplaylist.handlebars
@@ -11,7 +11,7 @@
             <li>Src: {{host_url}}</li>
             <li><button class="remove-current-track hidden btn btn-info btn-sm">Remove Track</button></li>
             <li><button class= "save-changes-current hidden btn btn-info btn-sm">Save Changes</button></li>
-          </ul>{{/each}}
+          </ul>{{/each}}</li>
         <li><button class= "edit-current-playlist btn btn-info btn-sm">Edit Playlist</button></li>
         <li><button class= "cancel-changes-current hidden btn btn-info btn-sm">Cancel</button></li>
     </ul>
