Added li br for spacing

--- a/assets/scripts/templates/tracks.handlebars
+++ b/assets/scripts/templates/tracks.handlebars
@@ -4,8 +4,11 @@
       <div class="track">
       <ul data-id={{this.id}}>
         <li><h2 class="track-title">{{this.title}}</h2></li>
+        <li><br><h4>Artist:</h4></li>
         <li><p class="track-meta">{{this.artist}}</p></li>
+        <li><br><h4>Host:</h4></li>
         <li><p>{{this.host_url}}</p></li>
+        <li><br></li>
         <li><button class= "add-to-playlist btn btn-info btn-sm">Add to Playlist</button></li>
         <li><select class="selectPlaylist hidden" name="selectPlaylist"></select></li>
         <li><button class= "confirm-to-playlist hidden btn btn-info btn-sm">Confirm</button></li>
