--- a/assets/scripts/templates/currentplaylist.handlebars
+++ b/assets/scripts/templates/currentplaylist.handlebars
@@ -12,8 +12,10 @@
             <li><button class="remove-current-track hidden btn btn-info btn-sm">Remove Track</button></li>
             <li><button class= "save-changes-current hidden btn btn-info btn-sm">Save Changes</button></li>
           </ul>{{/each}}</li>
-        <li><button class= "edit-current-playlist btn btn-info btn-sm">Edit Playlist</button></li>
-        <li><button class= "cancel-changes-current hidden btn btn-info btn-sm">Cancel</button></li>
+        <li>{{#if this.editable}}
+          <button class= "edit-current-playlist btn btn-info btn-sm">Edit Playlist</button>
+        <li><button class= "cancel-changes-current btn btn-info btn-sm">Cancel</button></li>
+        {{/if}}</li>
     </ul>
   {{/each}}
       <!-- </div> -->
