Cancel Button Edit
Cancel button only appears for current playlists after user has
selected edit.

--- a/assets/scripts/templates/currentplaylist.handlebars
+++ b/assets/scripts/templates/currentplaylist.handlebars
@@ -14,7 +14,7 @@
           </ul>{{/each}}</li>
         <li>{{#if this.editable}}
           <button class= "edit-current-playlist btn btn-info btn-sm">Edit Playlist</button>
-        <li><button class= "cancel-changes-current btn btn-info btn-sm">Cancel</button></li>
+        <li><button class= "cancel-changes-current hidden btn btn-info btn-sm">Cancel</button></li>
         {{/if}}</li>
     </ul>
   {{/each}}
